update lab with index

--- a/Week 1 Labs/JupyterNotebook_lab_solution.ipynb
+++ b/Week 1 Labs/JupyterNotebook_lab_solution.ipynb
@@ -10,15 +10,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f2329272",
+   "metadata": {},
+   "source": [
+    "#### Index\n",
+    "+ [Introduction](#Introduction)\n",
+    "+ [Name input](#Name)\n",
+    "+ [Profile](#Profile)\n",
+    "+ [Destination](#Destination)\n",
+    "+ [Image of the area](#Media)\n",
+    "+ [Activity suggestions](#Activities)\n",
+    "+ [Video of the Brecon Beacons](#Video)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "72bf2647",
    "metadata": {},
    "source": [
+    "\n",
+    "### Introduction  <a id='Introduction'></a>\n",
+    "\n",
     "this notebook is to capture your name and save your holiday preferences "
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bd6c5f37",
+   "metadata": {},
+   "source": [
+    "<a id='Name'></a>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "31d26667",
    "metadata": {},
    "outputs": [
@@ -26,17 +52,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter your name: Audrey Hepburn\n"
+      "Please enter your name: Sian\n"
      ]
     }
    ],
    "source": [
+    "#Name Input \n",
     "name = input('Please enter your name: ')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "60a20a9a",
+   "metadata": {},
+   "source": [
+    "<a id='Profile'></a>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "237fbcfb",
    "metadata": {},
    "outputs": [
@@ -47,14 +82,23 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Profile Picture\n",
     "from IPython.display import Image\n",
     "Image(filename='sian2.jpg')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "285cc456",
+   "metadata": {},
+   "source": [
+    "<a id='Destination'></a>"
    ]
   },
   {
@@ -98,7 +142,9 @@
    "id": "765b1a68",
    "metadata": {},
    "source": [
-    "### What does that look like ? "
+    "### What does that look like ? \n",
+    "\n",
+    "<a id='Media'></a>"
    ]
   },
   {
@@ -129,19 +175,20 @@
    "id": "f000844f",
    "metadata": {},
    "source": [
+    "<a id='Activities'></a>\n",
+    "\n",
     "### Things to do there: \n",
     "+ \n",
     "<span style='color:Green'> hike the mountains  </span>\n",
     "+ \n",
     "<span style='color:Blue'> wild swim  </span>\n",
     "+ \n",
-    "<span style='color:Grey'> Talk to sheep  </span>\n",
-    "    "
+    "<span style='color:Grey'> Talk to sheep  </span>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "536f12ae",
    "metadata": {},
    "outputs": [],
@@ -150,8 +197,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c92fd410",
+   "metadata": {},
+   "source": [
+    "<a id='Video'></a>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "6938b378",
    "metadata": {},
    "outputs": [
@@ -164,7 +219,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,6 +228,14 @@
     "#a video of the same peak from youtube\n",
     "HTML('<iframe frameborder=\"0\" scrolling=\"no\" marginheight=\"0\" marginwidth=\"0\"width=\"788.54\" height=\"443\" type=\"text/html\" src=\"https://www.youtube.com/embed/zqVZssmMvOI?autoplay=0&fs=0&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&origin=https://youtubeembedcode.com\"><div><small><a href=\"https://youtubeembedcode.com/de/\">youtubeembedcode de</a></small></div><div><small><a href=\"https://enableflashplayer.com\">Enable flash in chrome</a></small></div><div><small><a href=\"https://youtubeembedcode.com/en\">youtubeembedcode en</a></small></div><div><small><a href=\"https://embedvimeovideo.com\">Vimeo embed</a></small></div></iframe>')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e271586",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
